Bug 1406526 - Import Screenshots translations r=_6a68
This imports the translations from GitHub as of commit https://github.com/mozilla-services/screenshots/commit/76109c25cf49b56f24e0dd6a93836a104b03e567

MozReview-Commit-ID: 5sGhJmNfRmC

UltraBlame original commit: d4f0d0a485697f3663ccfefcc78dbd03d26b4789

--- a/browser/extensions/screenshots/webextension/_locales/be/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/be/messages.json
@@ -181,6 +181,39 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+PIXELS
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -374,6 +407,31 @@ message
 :
 "
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
 .
 "
 }
