--- a/browser/extensions/screenshots/webextension/_locales/ca/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/ca/messages.json
@@ -636,6 +636,61 @@ Firefox
 "
 }
 "
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Una
+forma
+nova
+de
+desar
+les
+captures
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Amplieu
+el
+men
+d
+'
+accions
+de
+la
+p
+gina
+de
+la
+barra
+d
+'
+adreces
+quan
+vulgueu
+fer
+una
+captura
+de
+pantalla
+.
+"
+}
+"
 tourHeaderClickAndDrag
 "
 :
