--- a/browser/extensions/screenshots/webextension/_locales/el/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/el/messages.json
@@ -181,6 +181,40 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -377,6 +411,18 @@ message
 "
 Firefox
 .
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
 "
 }
 "
