--- a/browser/extensions/screenshots/webextension/_locales/es_AR/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/es_AR/messages.json
@@ -240,6 +240,46 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Esta
+imagen
+ha
+sido
+recortada
+a
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -586,6 +626,54 @@ pantalla
 sin
 dejar
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Una
+nueva
+forma
+de
+guardar
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Expand
+el
+men
+de
+acciones
+de
+p
+gina
+en
+la
+barra
+de
+direcciones
+cuando
+quieras
+tomar
+una
+captura
 .
 "
 }
