--- a/browser/extensions/screenshots/webextension/_locales/es_CL/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/es_CL/messages.json
@@ -243,6 +243,46 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Esta
+imagen
+ha
+sido
+recortada
+a
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -605,6 +645,58 @@ sin
 salir
 de
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Una
+nueva
+forma
+de
+guardar
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Expande
+el
+men
+de
+acciones
+de
+p
+gina
+en
+la
+barra
+de
+direcciones
+en
+cualquier
+momento
+en
+que
+quieras
+tomar
+una
+captura
 .
 "
 }
