--- a/browser/extensions/screenshots/webextension/_locales/es_MX/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/es_MX/messages.json
@@ -241,6 +241,46 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Esta
+imagen
+ha
+sido
+recortada
+a
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -625,6 +665,60 @@ pantalla
 sin
 dejar
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Una
+nueva
+forma
+de
+guardar
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Expande
+el
+men
+de
+acciones
+de
+la
+p
+gina
+en
+la
+barra
+de
+direcciones
+en
+cualquier
+momento
+que
+quieras
+tomar
+una
+captura
+de
+pantalla
 .
 "
 }
