--- a/browser/extensions/screenshots/webextension/_locales/et/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/et/messages.json
@@ -230,6 +230,47 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+See
+pilt
+on
+v
+hendatud
+PIXELS
+-
+le
+pikslile
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -544,6 +585,44 @@ jaga
 ekraanipilte
 Firefoxist
 lahkumata
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Uus
+viis
+salvestamiseks
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Laienda
+lehe
+tegevuste
+men
+d
+aadressiribal
+kui
+soovid
+ekraanipildi
+teha
 .
 "
 }
