--- a/browser/extensions/screenshots/webextension/_locales/he/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/he/messages.json
@@ -305,6 +305,33 @@ message
 "
 }
 "
+privateWindowErrorTitle
+"
+:
+{
+"
+message
+"
+:
+"
+Screenshots
+"
+}
+"
+privateWindowErrorDetails
+"
+:
+{
+"
+message
+"
+:
+"
+.
+.
+"
+}
+"
 genericErrorTitle
 "
 :
@@ -346,6 +373,18 @@ message
 "
 Firefox
 .
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
 "
 }
 "
@@ -474,7 +513,7 @@ message
 "
 }
 "
-termsAndPrivacyNoticeCloudServices
+termsAndPrivacyNotice2
 "
 :
 {
@@ -485,15 +524,42 @@ message
 "
 Firefox
 Screenshots
-Firefox
-{
-termsAndPrivacyNoticeTermsLink
-}
-{
-termsAndPrivacyNoticePrivacyLink
-}
+TERMSANDPRIVACYNOTICETERMSLINK
+TERMSANDPRIVACYNOTICEPRIVACYLINK
 .
 "
+"
+placeholders
+"
+:
+{
+"
+termsandprivacynoticetermslink
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+"
+termsandprivacynoticeprivacylink
+"
+:
+{
+"
+content
+"
+:
+"
+2
+"
+}
+}
 }
 "
 termsAndPrivacyNoticeTermsLink
@@ -509,6 +575,18 @@ message
 }
 "
 termsAndPrivacyNoticyPrivacyLink
+"
+:
+{
+"
+message
+"
+:
+"
+"
+}
+"
+libraryLabel
 "
 :
 {
