--- a/browser/extensions/screenshots/webextension/_locales/hr/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/hr/messages.json
@@ -572,6 +572,50 @@ Firefox
 "
 }
 "
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Novi
+na
+in
+za
+spremanje
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Pro
+irite
+izbornik
+radnji
+stranice
+u
+adresnoj
+traci
+svaki
+puta
+kada
+elite
+snimiti
+ekran
+.
+"
+}
+"
 tourHeaderClickAndDrag
 "
 :
