--- a/browser/extensions/screenshots/webextension/_locales/hy_AM/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/hy_AM/messages.json
@@ -307,6 +307,33 @@ message
 "
 }
 "
+privateWindowErrorTitle
+"
+:
+{
+"
+message
+"
+:
+"
+:
+"
+}
+"
+privateWindowErrorDetails
+"
+:
+{
+"
+message
+"
+:
+"
+:
+:
+"
+}
+"
 genericErrorTitle
 "
 :
@@ -348,6 +375,31 @@ message
 "
 Firefox
 -
+:
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
 :
 "
 }
@@ -541,6 +593,18 @@ message
 }
 "
 termsAndPrivacyNoticyPrivacyLink
+"
+:
+{
+"
+message
+"
+:
+"
+"
+}
+"
+libraryLabel
 "
 :
 {
