--- a/browser/extensions/screenshots/webextension/_locales/id/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/id/messages.json
@@ -59,7 +59,7 @@ message
 "
 Buat
 Tangkapan
-layar
+Layar
 "
 }
 "
@@ -72,7 +72,7 @@ message
 "
 :
 "
-Gambar
+Tangkapan
 Saya
 "
 }
@@ -220,6 +220,45 @@ placeholders
 {
 "
 meta_key
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Gambar
+ini
+telah
+dipotong
+menjadi
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
 "
 :
 {
@@ -562,6 +601,49 @@ Firefox
 "
 }
 "
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Cara
+baru
+untuk
+menyimpan
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Bentangkan
+menu
+tindakan
+laman
+di
+bilah
+alamat
+setiap
+kali
+Anda
+ingin
+buat
+tangkapan
+layar
+.
+"
+}
+"
 tourHeaderClickAndDrag
 "
 :
@@ -722,7 +804,7 @@ message
 "
 :
 "
-Lewati
+LEWATI
 "
 }
 "
@@ -859,8 +941,7 @@ message
 "
 :
 "
-Tangkapan
-Layar
+Screenshots
 "
 }
 }
