--- a/browser/extensions/screenshots/webextension/_locales/lt/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/lt/messages.json
@@ -244,6 +244,46 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+i
+nuotrauka
+buvo
+apkirpta
+iki
+PIXELS
+ta
+k
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -566,6 +606,51 @@ ekrano
 nuotraukomis
 nepalikdami
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Naujas
+b
+das
+ra
+yti
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+I
+skleiskite
+tinklalapio
+veiksm
+meniu
+esant
+adreso
+juostoje
+bet
+kada
+kai
+norite
+padaryti
+ekrano
+nuotrauk
 .
 "
 }
