--- a/browser/extensions/screenshots/webextension/_locales/pt_BR/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/pt_BR/messages.json
@@ -244,6 +244,45 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Esta
+imagem
+foi
+recortada
+para
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -614,6 +653,59 @@ sem
 sair
 do
 Firefox
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Um
+novo
+jeito
+de
+salvar
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Expandir
+o
+menu
+de
+a
+es
+de
+p
+gina
+na
+barra
+de
+endere
+os
+sempre
+que
+voc
+quiser
+fazer
+uma
+captura
+de
+tela
 .
 "
 }
