--- a/browser/extensions/screenshots/webextension/_locales/pt_PT/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/pt_PT/messages.json
@@ -248,6 +248,45 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Esta
+imagem
+foi
+recortada
+para
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -688,10 +727,10 @@ message
 :
 "
 Capture
-aquilo
-mesmo
+exatamente
+o
 que
-pretende
+quer
 "
 }
 "
@@ -711,8 +750,7 @@ para
 capturar
 apenas
 uma
-por
-o
+parte
 de
 uma
 p
@@ -797,7 +835,7 @@ message
 "
 Como
 voc
-gostar
+gosta
 "
 }
 "
