--- a/browser/extensions/screenshots/webextension/_locales/sr/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/sr/messages.json
@@ -181,6 +181,40 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+PIXELS
+px
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
