--- a/browser/extensions/screenshots/webextension/_locales/tr/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/tr/messages.json
@@ -273,6 +273,44 @@ content
 }
 }
 "
+imageCroppedWarning
+"
+:
+{
+"
+message
+"
+:
+"
+Resim
+PIXELS
+piksele
+k
+rp
+ld
+.
+"
+"
+placeholders
+"
+:
+{
+"
+pixels
+"
+:
+{
+"
+content
+"
+:
+"
+1
+"
+}
+}
+}
+"
 requestErrorTitle
 "
 :
@@ -641,6 +679,53 @@ kaydedin
 ve
 payla
 n
+.
+"
+}
+"
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Kaydetmenin
+yeni
+yolu
+"
+}
+"
+tourBodyPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Ekran
+g
+r
+nt
+s
+almak
+istedi
+iniz
+zaman
+adres
+ubu
+undaki
+sayfa
+eylemleri
+men
+s
+n
+a
+abilirsiniz
 .
 "
 }
