--- a/browser/extensions/screenshots/webextension/_locales/ach/messages.json
+++ b/browser/extensions/screenshots/webextension/_locales/ach/messages.json
@@ -552,6 +552,22 @@ Firefox
 "
 }
 "
+tourHeaderPageAction
+"
+:
+{
+"
+message
+"
+:
+"
+Yoo
+manyen
+me
+gwoko
+"
+}
+"
 tourHeaderClickAndDrag
 "
 :
