--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -6122,3 +6122,25 @@ functionSearch
 =
 Function
 Search
+#
+LOCALIZATION
+NOTE
+(
+shortcuts
+.
+buttonName
+)
+:
+text
+describing
+#
+keyboard
+shortcut
+button
+text
+shortcuts
+.
+buttonName
+=
+Keyboard
+shortcuts
