Bug 1406551 - Update Debugger frontend (10-8). r=jdescottes
MozReview-Commit-ID: GKTM3rLKlTX

UltraBlame original commit: 656d53c7fd810507564844a6b0b732c116ad8efd

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -3387,42 +3387,6 @@ NOTE
 (
 sourceTabs
 .
-copyLink
-)
-:
-Editor
-source
-tab
-context
-menu
-item
-#
-for
-copying
-a
-link
-address
-.
-sourceTabs
-.
-copyLink
-=
-Copy
-link
-address
-sourceTabs
-.
-copyLink
-.
-accesskey
-=
-l
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
 prettyPrint
 )
 :
@@ -6122,3 +6086,25 @@ functionSearch
 =
 Function
 Search
+#
+LOCALIZATION
+NOTE
+(
+shortcuts
+.
+buttonName
+)
+:
+text
+describing
+#
+keyboard
+shortcut
+button
+text
+shortcuts
+.
+buttonName
+=
+Keyboard
+shortcuts
