--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -3387,6 +3387,42 @@ NOTE
 (
 sourceTabs
 .
+copyLink
+)
+:
+Editor
+source
+tab
+context
+menu
+item
+#
+for
+copying
+a
+link
+address
+.
+sourceTabs
+.
+copyLink
+=
+Copy
+link
+address
+sourceTabs
+.
+copyLink
+.
+accesskey
+=
+l
+#
+LOCALIZATION
+NOTE
+(
+sourceTabs
+.
 prettyPrint
 )
 :
@@ -6086,25 +6122,3 @@ functionSearch
 =
 Function
 Search
-#
-LOCALIZATION
-NOTE
-(
-shortcuts
-.
-buttonName
-)
-:
-text
-describing
-#
-keyboard
-shortcut
-button
-text
-shortcuts
-.
-buttonName
-=
-Keyboard
-shortcuts
