--- a/taskcluster/ci/l10n/kind.yml
+++ b/taskcluster/ci/l10n/kind.yml
@@ -292,6 +292,30 @@ win
 *
 :
 null
+toolchains
+:
+by
+-
+build
+-
+platform
+:
+default
+:
+[
+]
+android
+-
+api
+-
+16
+-
+l10n
+:
+-
+proguard
+-
+jar
 tooltool
 :
 by
