Bug 1407351 - Remove nightly-only e10s testing features from the main browser window. r=mikedeboer
The only thing that I didn't remove was the process ID on the tab tooltip, which I find to be super helpful. For that, I changed the check from E10S_TESTING_ONLY to NIGHTLY_BUILD.

MozReview-Commit-ID: 7AUFyHgXUAk

UltraBlame original commit: 3aef2a6367c8835db3de2e63fb2ec61415deb6c1

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -3196,20 +3196,6 @@ W
 <
 !
 ENTITY
-newNonRemoteWindow
-.
-label
-"
-New
-Non
--
-e10s
-Window
-"
->
-<
-!
-ENTITY
 editMenu
 .
 label
@@ -4791,6 +4777,107 @@ Switch
 to
 tab
 :
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+question
+"
+Would
+you
+like
+to
+improve
+your
+search
+experience
+with
+suggestions
+?
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+learnMore
+"
+Learn
+more
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+learnMore
+.
+accesskey
+"
+l
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+disable
+"
+No
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+disable
+.
+accesskey
+"
+n
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+enable
+"
+Yes
+"
+>
+<
+!
+ENTITY
+urlbar
+.
+searchSuggestionsNotification
+.
+enable
+.
+accesskey
+"
+y
 "
 >
 <
