--- a/browser/locales/en-US/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/locales/en-US/chrome/browser/customizableui/customizableWidgets.properties
@@ -1013,6 +1013,30 @@ WebIDE
 %
 S
 )
+e10s
+-
+button
+.
+label
+=
+New
+Non
+-
+e10s
+Window
+e10s
+-
+button
+.
+tooltiptext
+=
+Open
+a
+new
+Non
+-
+e10s
+Window
 toolbarspring
 .
 label
