--- a/devtools/client/locales/en-US/layout.properties
+++ b/devtools/client/locales/en-US/layout.properties
@@ -434,3 +434,68 @@ S
 Column
 %
 S
+#
+LOCALIZATION
+NOTE
+(
+layout
+.
+promoteMessage
+)
+:
+Text
+displayed
+in
+the
+promote
+bar
+for
+the
+#
+layout
+panel
+.
+layout
+.
+promoteMessage
+=
+Explore
+CSS
+Grids
+with
+the
+latest
+CSS
+Grid
+Inspector
+.
+#
+LOCALIZATION
+NOTE
+(
+layout
+.
+learnMore
+)
+:
+Text
+for
+the
+link
+displayed
+in
+the
+promote
+bar
+#
+for
+the
+layout
+panel
+.
+layout
+.
+learnMore
+=
+Learn
+more
