Bug 1406164 - We're bringing eBay back. r=flod
MozReview-Commit-ID: K37Eiz2TSRU

UltraBlame original commit: e1863419e38b73632e4d3f5a9634843a7a71a7ed

--- a/browser/locales/search/list.json
+++ b/browser/locales/search/list.json
@@ -66,6 +66,26 @@ google
 -
 nocodes
 "
+"
+ebay
+"
+:
+"
+ebay
+-
+ca
+"
+"
+ebay
+-
+fr
+"
+:
+"
+ebay
+-
+ca
+"
 }
 "
 KZ
@@ -172,6 +192,179 @@ google
 nocodes
 "
 }
+"
+AT
+"
+:
+{
+"
+ebay
+-
+de
+"
+:
+"
+ebay
+-
+at
+"
+}
+"
+AU
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+au
+"
+"
+ebay
+-
+uk
+"
+:
+"
+ebay
+-
+au
+"
+}
+"
+BE
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+be
+"
+"
+ebay
+-
+nl
+"
+:
+"
+ebay
+-
+be
+"
+"
+ebay
+-
+fr
+"
+:
+"
+ebay
+-
+be
+"
+}
+"
+CH
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+ch
+"
+"
+ebay
+-
+de
+"
+:
+"
+ebay
+-
+ch
+"
+"
+ebay
+-
+fr
+"
+:
+"
+ebay
+-
+ch
+"
+}
+"
+IE
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+ie
+"
+"
+ebay
+-
+uk
+"
+:
+"
+ebay
+-
+ie
+"
+}
+"
+NL
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+nl
+"
+}
+"
+GB
+"
+:
+{
+"
+ebay
+"
+:
+"
+ebay
+-
+uk
+"
+}
 }
 "
 locales
@@ -209,6 +402,9 @@ bing
 "
 "
 ddg
+"
+"
+ebay
 "
 "
 twitter
@@ -349,6 +545,11 @@ es
 bing
 "
 "
+ebay
+-
+es
+"
+"
 wikipedia
 -
 an
@@ -470,6 +671,11 @@ alla
 "
 "
 ddg
+"
+"
+ebay
+-
+es
 "
 "
 wikipedia
@@ -715,6 +921,11 @@ france
 ddg
 "
 "
+ebay
+-
+fr
+"
+"
 freelang
 "
 "
@@ -792,6 +1003,11 @@ diec2
 "
 "
 ddg
+"
+"
+ebay
+-
+es
 "
 "
 twitter
@@ -924,6 +1140,11 @@ GB
 ddg
 "
 "
+ebay
+-
+uk
+"
+"
 palasprint
 "
 "
@@ -1011,6 +1232,11 @@ bing
 ddg
 "
 "
+ebay
+-
+de
+"
+"
 leo_ende_de
 "
 "
@@ -1054,6 +1280,11 @@ de
 "
 "
 ddg
+"
+"
+ebay
+-
+de
 "
 "
 leo_ende_de
@@ -1154,6 +1385,11 @@ GB
 "
 "
 ddg
+"
+"
+ebay
+-
+uk
 "
 "
 twitter
@@ -1393,6 +1629,11 @@ drae
 ddg
 "
 "
+ebay
+-
+es
+"
+"
 twitter
 "
 "
@@ -1524,6 +1765,11 @@ GB
 "
 "
 ddg
+"
+"
+ebay
+-
+es
 "
 "
 elebila
@@ -1700,6 +1946,11 @@ france
 ddg
 "
 "
+ebay
+-
+fr
+"
+"
 cnrtl
 -
 tlfi
@@ -1753,6 +2004,11 @@ NL
 "
 "
 ddg
+"
+"
+ebay
+-
+nl
 "
 "
 marktplaats
@@ -1809,6 +2065,11 @@ GB
 ddg
 "
 "
+ebay
+-
+ie
+"
+"
 tearma
 "
 "
@@ -1850,11 +2111,6 @@ en
 GB
 "
 "
-faclair
--
-beag
-"
-"
 amazon
 -
 en
@@ -1868,6 +2124,16 @@ alba
 "
 "
 ddg
+"
+"
+ebay
+-
+uk
+"
+"
+faclair
+-
+beag
 "
 "
 wikipedia
@@ -1909,6 +2175,11 @@ GB
 "
 "
 ddg
+"
+"
+ebay
+-
+es
 "
 "
 wikipedia
@@ -2162,6 +2433,11 @@ de
 ddg
 "
 "
+ebay
+-
+de
+"
+"
 leo_ende_de
 "
 "
@@ -2404,6 +2680,11 @@ it
 "
 "
 ddg
+"
+"
+ebay
+-
+it
 "
 "
 hoepli
@@ -2828,6 +3109,11 @@ it
 "
 "
 ddg
+"
+"
+ebay
+-
+it
 "
 "
 paroledigenova
@@ -3376,6 +3662,11 @@ nl
 ddg
 "
 "
+ebay
+-
+nl
+"
+"
 marktplaats
 -
 nl
@@ -3687,6 +3978,11 @@ bing
 "
 "
 ddg
+"
+"
+ebay
+-
+ch
 "
 "
 leo_ende_de
