Bug 1393672 - Show PWA onboarding and confrim prompt r=jwu
MozReview-Commit-ID: Kzih56Om7NO

UltraBlame original commit: 385f9bbb4fd815828556ec0b99676c69f00c163e

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -9640,3 +9640,68 @@ full
 screen
 "
 >
+<
+!
+ENTITY
+pwa_add_to_launcher_confirm
+"
++
+Add
+to
+Home
+Screen
+"
+>
+<
+!
+ENTITY
+pwa_add_to_launcher_badge
+"
+Add
+PWA
+to
+Home
+Screen
+"
+>
+<
+!
+ENTITY
+pwa_continue_to_website
+"
+Continue
+to
+Website
+"
+>
+<
+!
+ENTITY
+pwa_onboarding_sumo
+"
+You
+can
+easily
+add
+this
+website
+to
+your
+Home
+screen
+to
+have
+instant
+access
+and
+browse
+faster
+with
+an
+app
+-
+like
+experience
+.
+"
+>
