--- a/devtools/client/locales/en-US/netmonitor.properties
+++ b/devtools/client/locales/en-US/netmonitor.properties
@@ -6003,6 +6003,45 @@ netmonitor
 .
 toolbar
 .
+toggleRecording
+)
+:
+This
+is
+the
+label
+displayed
+#
+in
+the
+network
+toolbar
+for
+the
+toggle
+recording
+button
+.
+netmonitor
+.
+toolbar
+.
+toggleRecording
+=
+Pause
+/
+Resume
+recording
+network
+log
+#
+LOCALIZATION
+NOTE
+(
+netmonitor
+.
+toolbar
+.
 perf
 )
 :
