--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -248,6 +248,43 @@ u
 LOCALIZATION
 NOTE
 (
+setDirectoryRoot
+)
+:
+This
+is
+the
+text
+that
+appears
+in
+the
+#
+context
+menu
+to
+set
+a
+directory
+as
+root
+directory
+setDirectoryRoot
+.
+label
+=
+Set
+directory
+root
+setDirectoryRoot
+.
+accesskey
+=
+r
+#
+LOCALIZATION
+NOTE
+(
 copyFunction
 )
 :
@@ -3551,40 +3588,6 @@ closeTabButtonTooltip
 =
 Close
 tab
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-newTabButtonTooltip
-)
-:
-The
-tooltip
-that
-is
-displayed
-for
-#
-new
-tab
-button
-in
-source
-tabs
-.
-sourceTabs
-.
-newTabButtonTooltip
-=
-Search
-for
-sources
-(
-%
-S
-)
 #
 LOCALIZATION
 NOTE
