Backed out changeset a52945a497c8 (bug 1408562) for leak in dt1 job on Linux x64 asan. r=backout on a CLOSED TREE
UltraBlame original commit: e862d9aa21e366753220bbcc1f9c9aaacace95d5

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -248,43 +248,6 @@ u
 LOCALIZATION
 NOTE
 (
-setDirectoryRoot
-)
-:
-This
-is
-the
-text
-that
-appears
-in
-the
-#
-context
-menu
-to
-set
-a
-directory
-as
-root
-directory
-setDirectoryRoot
-.
-label
-=
-Set
-directory
-root
-setDirectoryRoot
-.
-accesskey
-=
-r
-#
-LOCALIZATION
-NOTE
-(
 copyFunction
 )
 :
@@ -3588,6 +3551,40 @@ closeTabButtonTooltip
 =
 Close
 tab
+#
+LOCALIZATION
+NOTE
+(
+sourceTabs
+.
+newTabButtonTooltip
+)
+:
+The
+tooltip
+that
+is
+displayed
+for
+#
+new
+tab
+button
+in
+source
+tabs
+.
+sourceTabs
+.
+newTabButtonTooltip
+=
+Search
+for
+sources
+(
+%
+S
+)
 #
 LOCALIZATION
 NOTE
