--- a/browser/extensions/formautofill/locales/en-US/formautofill.properties
+++ b/browser/extensions/formautofill/locales/en-US/formautofill.properties
@@ -53,35 +53,38 @@ MPL
 0
 /
 .
-preferenceGroupTitle
-=
-Form
-Autofill
-enableAddressAutofill
-=
-Autofill
+#
+LOCALIZATION
+NOTE
+(
+saveAddressesMessage
+)
+:
+%
+S
+is
+brandShortName
+.
+This
+string
+is
+used
+on
+the
+doorhanger
+to
+#
+notify
+users
+that
 addresses
-learnMore
-=
-Learn
-more
-savedAddresses
-=
-Saved
-Addresses
-enableCreditCardAutofill
-=
-Autofill
-credit
-cards
-savedCreditCards
-=
-Saved
-Credit
-Cards
+are
+saved
+.
 saveAddressesMessage
 =
-Firefox
+%
+S
 now
 saves
 addresses
@@ -93,21 +96,38 @@ out
 forms
 faster
 .
+#
+LOCALIZATION
+NOTE
+(
+autofillOptionsLink
+autofillOptionsLinkOSX
+)
+:
+These
+strings
+are
+used
+in
+the
+doorhanger
+for
+#
+updating
+addresses
+.
+The
+link
+leads
+users
+to
+Form
+Autofill
+browser
+preferences
+.
 autofillOptionsLink
 =
-Form
-Autofill
-Options
-autofillSecurityOptionsLink
-=
-Form
-Autofill
-&
-Security
-Options
-changeAutofillOptions
-=
-Change
 Form
 Autofill
 Options
@@ -116,6 +136,45 @@ autofillOptionsLinkOSX
 Form
 Autofill
 Preferences
+#
+LOCALIZATION
+NOTE
+(
+autofillSecurityOptionsLink
+autofillSecurityOptionsLinkOSX
+)
+:
+These
+strings
+are
+used
+#
+in
+the
+doorhanger
+for
+saving
+credit
+card
+info
+.
+The
+link
+leads
+users
+to
+Form
+Autofill
+browser
+preferences
+.
+autofillSecurityOptionsLink
+=
+Form
+Autofill
+&
+Security
+Options
 autofillSecurityOptionsLinkOSX
 =
 Form
@@ -123,12 +182,76 @@ Autofill
 &
 Security
 Preferences
+#
+LOCALIZATION
+NOTE
+(
+changeAutofillOptions
+changeAutofillOptionsOSX
+)
+:
+These
+strings
+are
+used
+on
+the
+doorhanger
+#
+that
+notifies
+users
+that
+addresses
+are
+saved
+.
+The
+button
+leads
+users
+to
+Form
+Autofill
+browser
+preferences
+.
+changeAutofillOptions
+=
+Change
+Form
+Autofill
+Options
 changeAutofillOptionsOSX
 =
 Change
 Form
 Autofill
 Preferences
+#
+LOCALIZATION
+NOTE
+(
+addressesSyncCheckbox
+)
+:
+If
+Sync
+is
+enabled
+this
+checkbox
+is
+displayed
+on
+the
+doorhanger
+#
+shown
+when
+saving
+addresses
+.
 addressesSyncCheckbox
 =
 Share
@@ -136,6 +259,27 @@ addresses
 with
 synced
 devices
+#
+LOCALIZATION
+NOTE
+(
+updateAddressMessage
+createAddressLabel
+updateAddressLabel
+)
+:
+Used
+on
+the
+doorhanger
+#
+when
+an
+address
+change
+is
+detected
+.
 updateAddressMessage
 =
 Would
@@ -159,12 +303,48 @@ updateAddressLabel
 =
 Update
 Address
+#
+LOCALIZATION
+NOTE
+(
+saveCreditCardMessage
+saveCreditCardLabel
+cancelCreditCardLabel
+neverSaveCreditCardLabel
+)
+:
+#
+Used
+on
+the
+doorhanger
+when
+users
+submit
+payment
+with
+credit
+card
+.
+#
+LOCALIZATION
+NOTE
+(
+saveCreditCardMessage
+)
+:
+%
+S
+is
+brandShortName
+.
 saveCreditCardMessage
 =
 Would
 you
 like
-Firefox
+%
+S
 to
 save
 this
@@ -195,6 +375,24 @@ Never
 Save
 Credit
 Cards
+#
+LOCALIZATION
+NOTE
+(
+openAutofillMessagePanel
+)
+:
+Tooltip
+label
+for
+Form
+Autofill
+doorhanger
+icon
+on
+address
+bar
+.
 openAutofillMessagePanel
 =
 Open
@@ -202,23 +400,144 @@ Form
 Autofill
 message
 panel
+#
+LOCALIZATION
+NOTE
+(
+autocompleteFooterOption
+autocompleteFooterOptionOSX
+)
+:
+Used
+as
+a
+label
+for
+the
+button
+#
+displayed
+at
+the
+bottom
+of
+the
+drop
+down
+suggestion
+to
+open
+Form
+Autofill
+browser
+preferences
+.
 autocompleteFooterOption
 =
 Form
 Autofill
-Options
-autocompleteFooterOptionShort
-=
-More
 Options
 autocompleteFooterOptionOSX
 =
 Form
 Autofill
 Preferences
+#
+LOCALIZATION
+NOTE
+(
+autocompleteFooterOptionShort
+autocompleteFooterOptionOSXShort
+)
+:
+Used
+as
+a
+label
+for
+the
+button
+#
+displayed
+at
+the
+bottom
+of
+the
+drop
+down
+suggestion
+to
+open
+Form
+Autofill
+browser
+preferences
+.
+This
+version
+is
+used
+#
+instead
+of
+autocompleteFooterOption
+*
+when
+the
+menu
+width
+is
+below
+185px
+.
+autocompleteFooterOptionShort
+=
+More
+Options
 autocompleteFooterOptionOSXShort
 =
 Preferences
+#
+LOCALIZATION
+NOTE
+(
+category
+.
+address
+category
+.
+name
+category
+.
+organization
+category
+.
+tel
+category
+.
+email
+)
+:
+#
+Used
+in
+autofill
+drop
+down
+suggestion
+to
+indicate
+what
+other
+categories
+Form
+Autofill
+will
+attempt
+to
+fill
+.
 category
 .
 address
@@ -319,10 +638,11 @@ e
 g
 .
 Also
-fill
+autofills
 company
 phone
 email
+.
 phishingWarningMessage
 =
 Also
@@ -334,6 +654,207 @@ phishingWarningMessage2
 Autofills
 %
 S
+#
+LOCALIZATION
+NOTE
+(
+insecureFieldWarningDescription
+)
+:
+%
+S
+is
+brandShortName
+.
+This
+string
+is
+used
+in
+drop
+down
+#
+suggestion
+when
+users
+try
+to
+autofill
+credit
+card
+on
+an
+insecure
+website
+(
+without
+https
+)
+.
+insecureFieldWarningDescription
+=
+%
+S
+has
+detected
+an
+insecure
+site
+.
+Form
+Autofill
+is
+temporarily
+disabled
+#
+LOCALIZATION
+NOTE
+(
+autofillAddressesCheckbox
+)
+:
+Label
+for
+the
+checkbox
+that
+enables
+autofilling
+addresses
+.
+autofillAddressesCheckbox
+=
+Autofill
+addresses
+#
+LOCALIZATION
+NOTE
+(
+learnMoreLabel
+)
+:
+Label
+for
+the
+link
+that
+leads
+users
+to
+the
+Form
+Autofill
+SUMO
+page
+.
+learnMoreLabel
+=
+Learn
+more
+#
+LOCALIZATION
+NOTE
+(
+savedAddressesBtnLabel
+)
+:
+Label
+for
+the
+button
+that
+opens
+a
+dialog
+that
+shows
+the
+#
+list
+of
+saved
+addresses
+.
+savedAddressesBtnLabel
+=
+Saved
+Addresses
+#
+LOCALIZATION
+NOTE
+(
+autofillCreditCardsCheckbox
+)
+:
+Label
+for
+the
+checkbox
+that
+enables
+autofilling
+credit
+cards
+.
+autofillCreditCardsCheckbox
+=
+Autofill
+credit
+cards
+#
+LOCALIZATION
+NOTE
+(
+savedCreditCardsBtnLabel
+)
+:
+Label
+for
+the
+button
+that
+opens
+a
+dialog
+that
+shows
+the
+list
+#
+of
+saved
+credit
+cards
+.
+savedCreditCardsBtnLabel
+=
+Saved
+Credit
+Cards
+#
+LOCALIZATION
+NOTE
+(
+manageAddressesTitle
+manageCreditCardsTitle
+)
+:
+The
+dialog
+title
+for
+the
+list
+of
+addresses
+or
+#
+credit
+cards
+in
+browser
+preferences
+.
 manageAddressesTitle
 =
 Saved
@@ -343,6 +864,29 @@ manageCreditCardsTitle
 Saved
 Credit
 Cards
+#
+LOCALIZATION
+NOTE
+(
+addressesListHeader
+creditCardsListHeader
+)
+:
+The
+header
+for
+the
+list
+of
+addresses
+or
+credit
+cards
+#
+in
+browser
+preferences
+.
 addressesListHeader
 =
 Addresses
@@ -350,25 +894,46 @@ creditCardsListHeader
 =
 Credit
 Cards
-showCreditCards
+showCreditCardsBtnLabel
 =
 Show
 Credit
 Cards
-hideCreditCards
+hideCreditCardsBtnLabel
 =
 Hide
 Credit
 Cards
-remove
+removeBtnLabel
 =
 Remove
-add
+addBtnLabel
 =
 Add
-edit
+editBtnLabel
 =
 Edit
+#
+LOCALIZATION
+NOTE
+(
+addNewAddressTitle
+editAddressTitle
+)
+:
+The
+dialog
+title
+for
+creating
+or
+editing
+addresses
+#
+in
+browser
+preferences
+.
 addNewAddressTitle
 =
 Add
@@ -425,14 +990,15 @@ Phone
 email
 =
 Email
-cancel
+cancelBtnLabel
 =
 Cancel
-save
+saveBtnLabel
 =
 Save
 countryWarningMessage
 =
+Form
 Autofill
 is
 currently
@@ -441,6 +1007,28 @@ only
 for
 US
 addresses
+#
+LOCALIZATION
+NOTE
+(
+addNewCreditCardTitle
+editCreditCardTitle
+)
+:
+The
+dialog
+title
+for
+creating
+or
+editing
+#
+credit
+cards
+in
+browser
+preferences
+.
 addNewCreditCardTitle
 =
 Add
@@ -464,19 +1052,3 @@ Card
 cardExpires
 =
 Expires
-insecureFieldWarningDescription
-=
-%
-S
-has
-detected
-an
-insecure
-site
-.
-Credit
-card
-autofill
-is
-temporarily
-disabled
