Bug 1407528 - Enable localization for Form Autofill on m-c. r=Pike
MozReview-Commit-ID: FaPztnDGQTb

UltraBlame original commit: 11da589e5ad5c670bdad7dac3048666cba1062c9

--- a/browser/locales/l10n.toml
+++ b/browser/locales/l10n.toml
@@ -509,6 +509,44 @@ browser
 /
 extensions
 /
+formautofill
+/
+locales
+/
+en
+-
+US
+/
+*
+*
+"
+l10n
+=
+"
+{
+l
+}
+browser
+/
+extensions
+/
+formautofill
+/
+*
+*
+"
+[
+[
+paths
+]
+]
+reference
+=
+"
+browser
+/
+extensions
+/
 onboarding
 /
 locales
