Bug 1230241 - Do not disturb language is awkward in about:preferences. r=evanxd
MozReview-Commit-ID: 8FMy3bTUykU

UltraBlame original commit: 43af8c34f8ccc62df38c3dde550db38358a9ad15

--- a/browser/locales/en-US/chrome/browser/preferences/preferences.properties
+++ b/browser/locales/en-US/chrome/browser/preferences/preferences.properties
@@ -486,6 +486,42 @@ not
 be
 saved
 #
+LOCALIZATION
+NOTE
+(
+pauseNotifications
+.
+label
+)
+:
+%
+S
+is
+replaced
+with
+the
+#
+brandShortName
+of
+the
+application
+.
+pauseNotifications
+.
+label
+=
+Pause
+notifications
+until
+%
+S
+restarts
+pauseNotifications
+.
+accesskey
+=
+n
+#
 #
 #
 #
