--- a/toolkit/locales/en-US/chrome/alerts/alert.properties
+++ b/toolkit/locales/en-US/chrome/alerts/alert.properties
@@ -257,7 +257,7 @@ settings
 LOCALIZATION
 NOTE
 (
-doNotDisturb
+pauseNotifications
 .
 label
 )
@@ -274,16 +274,13 @@ of
 the
 application
 .
-doNotDisturb
+pauseNotifications
 .
 label
 =
-Do
-not
-disturb
-me
+Pause
+notifications
 until
-I
-restart
 %
 S
+restarts
