bug 1406396 - work around NSS utils potentially loading spurious root cert modules r=mgoodwin
NSS command-line utilities may add a built-in root certificate module with the
name "Root Certs" if run on a profile that has a copy of the module file (which
is an unexpected configuration in general for Firefox). This can cause breakage.
To work around this, PSM now simply deletes any module named "Root Certs" at
startup. In an effort to prevent PSM from deleting unrelated modules
coincidentally named "Root Certs", we also prevent the user from using the
Firefox UI to name modules "Root Certs".

MozReview-Commit-ID: ABja3wpShO9

UltraBlame original commit: e3a4bc559c9c95e3bbca20cf4ed4a640633cc925

--- a/security/manager/locales/en-US/chrome/pippki/pippki.properties
+++ b/security/manager/locales/en-US/chrome/pippki/pippki.properties
@@ -1833,3 +1833,45 @@ for
 this
 site
 .
+#
+Load
+Module
+Dialog
+loadModuleHelp_emptyModuleName
+=
+The
+module
+name
+cannot
+be
+empty
+.
+#
+LOCALIZATION
+NOTE
+(
+loadModuleHelp_rootCertsModuleName
+)
+:
+Do
+not
+translate
+'
+Root
+Certs
+'
+loadModuleHelp_rootCertsModuleName
+=
+Root
+Certs
+is
+reserved
+and
+cannot
+be
+used
+as
+the
+module
+name
+.
