Bug 1230373 - Enable mozilla/use-services for browser/components/ r=mossop
MozReview-Commit-ID: 9m9iss3jUJJ

UltraBlame original commit: c072884b1b905a6e00f756c7d3697df3447e7b63

--- a/browser/components/translation/translation-infobar.xml
+++ b/browser/components/translation/translation-infobar.xml
@@ -2005,27 +2005,9 @@ aTranslation
 let
 bundle
 =
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-intl
-/
-stringbundle
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIStringBundleService
-)
+strings
 .
 createBundle
 (
@@ -3513,27 +3495,9 @@ detectedLanguage
 let
 langBundle
 =
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-intl
-/
-stringbundle
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIStringBundleService
-)
+strings
 .
 createBundle
 (
@@ -3576,27 +3540,9 @@ menuitem
 let
 bundle
 =
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-intl
-/
-stringbundle
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIStringBundleService
-)
+strings
 .
 createBundle
 (
