Bug 1409261 - Update string and add translation note for pwa badge and onboarding. r=flod
Please see attachments in the bug for details where the strings are.

MozReview-Commit-ID: KUv79x7O0UW

UltraBlame original commit: a3a899e97e2732ff003bf5a17dd8be4dae517a25

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -9642,6 +9642,28 @@ screen
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+pwa_add_to_launcher_confirm
+)
+:
+The
+plus
+sign
+here
+is
+part
+of
+UI
+design
+-
+-
+>
+<
+!
 ENTITY
 pwa_add_to_launcher_confirm
 "
@@ -9654,11 +9676,64 @@ Screen
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+pwa_add_to_launcher_badge2
+)
+:
+Used
+as
+label
+in
+the
+page
+actions
+dropdown
+list
+displayed
+when
+there
+are
+more
+than
+3
+actions
+available
+for
+a
+page
+.
+See
+also
+https
+:
+/
+/
+bug1409261
+.
+bmoattachments
+.
+org
+/
+attachment
+.
+cgi
+?
+id
+=
+8919897
+-
+-
+>
+<
+!
 ENTITY
-pwa_add_to_launcher_badge
+pwa_add_to_launcher_badge2
 "
 Add
-PWA
 to
 Home
 Screen
