Bug 1408562 - Update Debugger frontend (10-13). r=jdescottes
MozReview-Commit-ID: 6qEViJ9Z2Nw

UltraBlame original commit: 47bb399c0621cf47178dbb2360dabeda70dc5eb6

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -248,6 +248,43 @@ u
 LOCALIZATION
 NOTE
 (
+setDirectoryRoot
+)
+:
+This
+is
+the
+text
+that
+appears
+in
+the
+#
+context
+menu
+to
+set
+a
+directory
+as
+root
+directory
+setDirectoryRoot
+.
+label
+=
+Set
+directory
+root
+setDirectoryRoot
+.
+accesskey
+=
+r
+#
+LOCALIZATION
+NOTE
+(
 copyFunction
 )
 :
@@ -2833,6 +2870,13 @@ disableBreakpoint
 =
 Disable
 breakpoint
+editor
+.
+disableBreakpoint
+.
+accesskey
+=
+D
 #
 LOCALIZATION
 NOTE
@@ -2938,6 +2982,8 @@ menu
 item
 for
 adding
+/
+editing
 a
 breakpoint
 condition
@@ -2950,8 +2996,17 @@ editor
 addConditionalBreakpoint
 =
 Add
+/
+Edit
 conditional
 breakpoint
+editor
+.
+addConditionalBreakpoint
+.
+accesskey
+=
+c
 #
 LOCALIZATION
 NOTE
@@ -3047,6 +3102,13 @@ to
 %
 S
 location
+editor
+.
+jumpToMappedLocation1
+.
+accesskey
+=
+m
 #
 LOCALIZATION
 NOTE
@@ -3185,6 +3247,13 @@ placeholder
 Add
 watch
 expression
+expressions
+.
+placeholder
+.
+accesskey
+=
+e
 #
 LOCALIZATION
 NOTE
@@ -3551,40 +3620,6 @@ closeTabButtonTooltip
 =
 Close
 tab
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-newTabButtonTooltip
-)
-:
-The
-tooltip
-that
-is
-displayed
-for
-#
-new
-tab
-button
-in
-source
-tabs
-.
-sourceTabs
-.
-newTabButtonTooltip
-=
-Search
-for
-sources
-(
-%
-S
-)
 #
 LOCALIZATION
 NOTE
@@ -5901,6 +5936,13 @@ toggleBreakpoint
 =
 Toggle
 Breakpoint
+shortcuts
+.
+toggleBreakpoint
+.
+accesskey
+=
+B
 #
 LOCALIZATION
 NOTE
