Bug 1395841 - Part 1: Change page option strings fom 'add to home screen' to 'add page shortcut'. r=snorp
MozReview-Commit-ID: 9fFN9aYEI3v

UltraBlame original commit: e12e4ab70862611b6e7b12d9837dc100adbc9175

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -5374,12 +5374,11 @@ Remove
 <
 !
 ENTITY
-contextmenu_add_to_launcher
+contextmenu_add_page_shortcut
 "
 Add
-to
-Home
-Screen
+Page
+Shortcut
 "
 >
 <
@@ -9224,12 +9223,11 @@ version
 <
 !
 ENTITY
-promotion_add_to_homescreen
+promotion_add_page_shortcut
 "
 Add
-to
-home
-screen
+page
+shortcut
 "
 >
 <
