Bug 1331931 - Move the blocked popup icon into the identity block and add a blocked popup indicator item to the identity popup. r=johannh
MozReview-Commit-ID: HxsG2Uz2PuZ

UltraBlame original commit: 328f5e2f6939516b6519a45d0341b863a91747de

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -2881,24 +2881,68 @@ pop
 ups
 are
 blocked
-popupWarningDontShowFromLocationbar
-=
-Don
-t
-show
-info
-bar
-when
-pop
--
-ups
-are
-blocked
 popupShowPopupPrefix
 =
 Show
 %
 S
+#
+LOCALIZATION
+NOTE
+(
+popupShowBlockedPopupsIndicatorText
+)
+:
+Semicolon
+seperated
+list
+of
+plural
+forms
+.
+#
+See
+:
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+#
+#
+1
+is
+the
+number
+of
+pop
+-
+ups
+blocked
+.
+popupShowBlockedPopupsIndicatorText
+=
+Show
+#
+1
+blocked
+popup
+;
+Show
+#
+1
+blocked
+popups
 #
 Bad
 Content
