--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2634,6 +2634,25 @@ website
 ENTITY
 urlbar
 .
+popupBlocked
+.
+tooltip
+"
+You
+have
+blocked
+popups
+for
+this
+website
+.
+"
+>
+<
+!
+ENTITY
+urlbar
+.
 openHistoryPopup
 .
 tooltip
