Bug 1410095 - Fix search URLs in prisjakt.nu searchplugin for Swedish r=mkaply
MozReview-Commit-ID: Ih2CQwVOIS4

UltraBlame original commit: f9b62ceada2a74d3005d983ff4ccffcc048dd3fd

--- a/browser/locales/searchplugins/prisjakt-sv-SE.xml
+++ b/browser/locales/searchplugins/prisjakt-sv-SE.xml
@@ -235,7 +235,7 @@ GET
 template
 =
 "
-http
+https
 :
 /
 /
@@ -245,9 +245,14 @@ prisjakt
 .
 nu
 /
-supersearch
-.
-php
+#
+rparams
+=
+ss
+=
+{
+searchTerms
+}
 "
 resultdomain
 =
@@ -256,68 +261,12 @@ prisjakt
 .
 nu
 "
->
-<
-Param
-name
+rel
 =
 "
-s
-"
-value
-=
-"
-{
-searchTerms
-}
+searchform
 "
 /
->
-<
-Param
-name
-=
-"
-r
-"
-value
-=
-"
-1
-"
-/
->
-<
-Param
-name
-=
-"
-e
-"
-value
-=
-"
-utf8
-"
-/
->
-<
-Param
-name
-=
-"
-ref
-"
-value
-=
-"
-155
-"
-/
->
-<
-/
-Url
 >
 <
 Url
@@ -340,7 +289,7 @@ GET
 template
 =
 "
-http
+https
 :
 /
 /
@@ -357,33 +306,27 @@ opensearch
 suggestions
 .
 php
-?
-search
+"
+>
+<
+Param
+name
 =
+"
+search
+"
+value
+=
+"
 {
 searchTerms
 }
 "
+/
 >
 <
 /
 Url
->
-<
-SearchForm
->
-http
-:
-/
-/
-www
-.
-prisjakt
-.
-nu
-<
-/
-SearchForm
 >
 <
 /
