--- a/mobile/locales/searchplugins/prisjakt-sv-SE.xml
+++ b/mobile/locales/searchplugins/prisjakt-sv-SE.xml
@@ -402,7 +402,7 @@ GET
 template
 =
 "
-http
+https
 :
 /
 /
@@ -419,13 +419,23 @@ opensearch
 suggestions
 .
 php
-?
-search
+"
+>
+<
+Param
+name
 =
+"
+search
+"
+value
+=
+"
 {
 searchTerms
 }
 "
+/
 >
 <
 /
@@ -448,7 +458,7 @@ GET
 template
 =
 "
-http
+https
 :
 /
 /
@@ -457,46 +467,14 @@ m
 prisjakt
 .
 nu
-"
-rel
-=
-"
-searchform
-"
->
-<
-Param
-name
-=
-"
-mobil_search
-"
-value
-=
-"
+/
+search
+/
 {
 searchTerms
 }
 "
 /
->
-<
-Param
-name
-=
-"
-ref
-"
-value
-=
-"
-155
-"
-/
->
-<
-/
-Url
 >
 <
 Url
@@ -519,7 +497,7 @@ GET
 template
 =
 "
-http
+https
 :
 /
 /
@@ -529,72 +507,16 @@ prisjakt
 .
 nu
 /
-search
-.
-php
-"
->
-<
-Param
-name
+#
+rparams
 =
-"
-s
-"
-value
+ss
 =
-"
 {
 searchTerms
 }
 "
 /
->
-<
-Param
-name
-=
-"
-r
-"
-value
-=
-"
-1
-"
-/
->
-<
-Param
-name
-=
-"
-e
-"
-value
-=
-"
-utf8
-"
-/
->
-<
-Param
-name
-=
-"
-ref
-"
-value
-=
-"
-155
-"
-/
->
-<
-/
-Url
 >
 <
 /
