--- a/toolkit/locales/en-US/chrome/global/aboutTelemetry.properties
+++ b/toolkit/locales/en-US/chrome/global/aboutTelemetry.properties
@@ -123,7 +123,7 @@ S
 LOCALIZATION
 NOTE
 (
-settingsExplanation
+homeExplanation
 )
 :
 #
@@ -133,9 +133,9 @@ settingsExplanation
 S
 is
 either
-releaseData
+telemetryEnabled
 or
-prereleaseData
+telemetryDisabled
 #
 -
 %
@@ -143,38 +143,34 @@ prereleaseData
 S
 is
 either
-telemetryEnabled
+extendedTelemetryEnabled
 or
-telemetryDisabled
-settingsExplanation
+extendedTelemetryDisabled
+homeExplanation
 =
 Telemetry
 is
-collecting
 %
 1
 S
 and
-upload
+extended
+telemetry
 is
 %
 2
 S
 .
-releaseData
-=
-release
-data
-prereleaseData
-=
-pre
--
-release
-data
 telemetryEnabled
 =
 enabled
 telemetryDisabled
+=
+disabled
+extendedTelemetryEnabled
+=
+enabled
+extendedTelemetryDisabled
 =
 disabled
 #
