--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2575,6 +2575,26 @@ website
 ENTITY
 urlbar
 .
+indexedDBBlocked
+.
+tooltip
+"
+You
+have
+blocked
+data
+storage
+for
+this
+website
+.
+"
+>
+<
+!
+ENTITY
+urlbar
+.
 webNotificationsBlocked
 .
 tooltip
