--- a/browser/locales/en-US/chrome/browser/pageInfo.dtd
+++ b/browser/locales/en-US/chrome/browser/pageInfo.dtd
@@ -535,6 +535,25 @@ Plugins
 <
 !
 ENTITY
+permClearStorage
+"
+Clear
+Storage
+"
+>
+<
+!
+ENTITY
+permClearStorage
+.
+accesskey
+"
+C
+"
+>
+<
+!
+ENTITY
 securityTab
 "
 Security
