--- a/toolkit/locales/en-US/chrome/global/aboutTelemetry.properties
+++ b/toolkit/locales/en-US/chrome/global/aboutTelemetry.properties
@@ -123,7 +123,7 @@ S
 LOCALIZATION
 NOTE
 (
-homeExplanation
+settingsExplanation
 )
 :
 #
@@ -133,9 +133,9 @@ homeExplanation
 S
 is
 either
-telemetryEnabled
+releaseData
 or
-telemetryDisabled
+prereleaseData
 #
 -
 %
@@ -143,34 +143,38 @@ telemetryDisabled
 S
 is
 either
-extendedTelemetryEnabled
+telemetryUploadEnabled
 or
-extendedTelemetryDisabled
-homeExplanation
+telemetryUploadDisabled
+settingsExplanation
 =
 Telemetry
 is
+collecting
 %
 1
 S
 and
-extended
-telemetry
+upload
 is
 %
 2
 S
 .
-telemetryEnabled
+releaseData
+=
+release
+data
+prereleaseData
+=
+pre
+-
+release
+data
+telemetryUploadEnabled
 =
 enabled
-telemetryDisabled
-=
-disabled
-extendedTelemetryEnabled
-=
-enabled
-extendedTelemetryDisabled
+telemetryUploadDisabled
 =
 disabled
 #
