Bug 1409967 - Adds an initial react/redux template for loading a flexbox accordion in the Layout panel. r=pbro
UltraBlame original commit: 53967c00d476889972743d787aec72d5ceeb64e9

--- a/devtools/client/locales/en-US/layout.properties
+++ b/devtools/client/locales/en-US/layout.properties
@@ -81,6 +81,28 @@ sidebar
 LOCALIZATION
 NOTE
 (
+flexbox
+.
+header
+)
+:
+The
+accordion
+header
+for
+the
+Flexbox
+pane
+.
+flexbox
+.
+header
+=
+Flexbox
+#
+LOCALIZATION
+NOTE
+(
 layout
 .
 cannotShowGridOutline
