Bug 1407849 - [bs] Search engine setup for Firefox Mobile for Bosnian r=flod
MozReview-Commit-ID: 6relQLQwQOI

UltraBlame original commit: 5c754216e644749a54b581294db79d50bf1e5fe8

--- a/mobile/locales/search/list.json
+++ b/mobile/locales/search/list.json
@@ -537,6 +537,41 @@ br
 }
 }
 "
+bs
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+google
+"
+"
+yahoo
+"
+"
+bing
+"
+"
+twitter
+"
+"
+wikipedia
+-
+bs
+"
+]
+}
+}
+"
 ca
 "
 :
