--- a/browser/extensions/formautofill/locales/en-US/formautofill.properties
+++ b/browser/extensions/formautofill/locales/en-US/formautofill.properties
@@ -263,6 +263,45 @@ devices
 LOCALIZATION
 NOTE
 (
+creditCardsSyncCheckbox
+)
+:
+If
+Sync
+is
+enabled
+and
+credit
+card
+sync
+is
+available
+#
+this
+checkbox
+is
+displayed
+on
+the
+doorhanger
+shown
+when
+saving
+credit
+card
+.
+creditCardsSyncCheckbox
+=
+Share
+credit
+cards
+with
+synced
+devices
+#
+LOCALIZATION
+NOTE
+(
 updateAddressMessage
 createAddressLabel
 updateAddressLabel
