Bug 1411109- [ach] Search engine setup for Firefox Mobile for Acholi, r=flod
MozReview-Commit-ID: 6vFXKBYolqj

UltraBlame original commit: 1402f70041d9b22128b7d8819c7529cccb2b749f

--- a/mobile/locales/search/list.json
+++ b/mobile/locales/search/list.json
@@ -194,6 +194,36 @@ locales
 :
 {
 "
+ach
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+google
+"
+"
+yahoo
+"
+"
+bing
+"
+"
+wikipedia
+"
+]
+}
+}
+"
 an
 "
 :
